refactor : 각 객체별  불필요 의존성 삭제 refactor : 각 객체별 메서드 네이밍 변경, 로직 최적화 test : 각 기능별 테스트 코드 작성